# libudjatdbus

./: .gitignore  CHANGELOG  Makefile.in  README.md  configure.ac  dbus.cbp  link.sh  meson.build  static.pc.in  test.xml  valgrind.suppression
.github/workflows/: codeql.yml
debian/: changelog  control  libudjat.dsc  libudjatdbus.dsc  rules  shlibs  udjat-module-dbus.dsc
legacy/: configure.ac
po/: POTFILES.in
rpm/: _service  _servicedata  libudjatdbus.spec  udjat-module-dbus.spec
sdk/linux/: dynamic.pc.in  static.pc.in
src/include/: config.h.in
src/include/private/: dataslot.h  mainloop.h  messagedata.h
src/include/udjat/: dbus.h
src/include/udjat/alert/: d-bus.h
src/include/udjat/module/: dbus.h
src/include/udjat/tools/: dbus.h
src/include/udjat/tools/actions/: dbus.h
src/include/udjat/tools/dbus/: connection.h  defs.h  emitter.h  exception.h  interface.h  member.h  message.h  service.h  signal.h  value.h
src/module/: alert.cc  argument.cc  connection.cc  event.cc  filter.cc  init.cc  private.h  request.cc  response.cc  signal.cc  udjatworker.cc  value.cc  worker.cc
src/testprogram/: testprogram.cc
testscripts/: agent.sh  agentinfo.sh  echo.sh  introspect.sh  modules.sh  signal.sh  wait.sh
